tests/paczka1/fuzzy1/48137053.err
Error in line 2: S932 A780 98,3
Error in line 15: S932 A780 65,2
Error in line 12: WfRqgYM9 A780 17,9
Error in line 33: M1MJ A780 -1,8
Error in line 30: WfRqgYM9 A780 47,3
